--- a/src/components/specific/marketplace/datasetCards/verticalCard/style.module.css
+++ b/src/components/specific/marketplace/datasetCards/verticalCard/style.module.css
@@ -19,7 +19,6 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
-
     margin: 20px;
     padding: 0;
 }
@@ -27,6 +26,7 @@
 .container img {
     border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 15px;
+    min-height: 30vh;
 }
 
 .typeCard {
